fix(client): note buttons visible in zen mode

--- a/apps/client/src/stylesheets/style.css
+++ b/apps/client/src/stylesheets/style.css
@@ -2025,7 +2025,7 @@ body.zen .ribbon-container:not(:has(.classic-toolbar-widget.visible)),
 body.zen .ribbon-container:has(.classic-toolbar-widget.visible) .ribbon-top-row,
 body.zen .ribbon-container .ribbon-body:not(:has(.classic-toolbar-widget.visible)),
 body.zen .note-icon-widget,
-body.zen .title-row .button-widget,
+body.zen .title-row .icon-action,
 body.zen .floating-buttons-children > *:not(.bx-edit-alt),
 body.zen .action-button {
     display: none !important;
